text align fix if I have time at end but premark

--- a/static/style.css
+++ b/static/style.css
@@ -104,9 +104,9 @@ ul li a {
     display: block;
     padding: 20px 75px;
     color: white;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 ul li ul.dropdown li{
